@@ -831,7 +831,7 @@ function themeblvd_conditionals_option( $id, $name, $val = null ) {
 	// Put WPML filters back
 	if ( themeblvd_installed('wpml') ) {
 		add_filter( 'get_pages', array( $GLOBALS['sitepress'], 'exclude_other_language_pages2' ) );
-		add_filter( 'get_terms_args', array( $GLOBALS['sitepress'], 'get_terms_args_filter' ) );
+		add_filter( 'get_terms_args', array( $GLOBALS['sitepress'], 'get_terms_args_filter' ), 10, 2 );
 		add_filter( 'terms_clauses', array( $GLOBALS['sitepress'], 'terms_clauses' ), 10, 4 );
 	}
 
